ISSUE #210 - Changed some md-list-items to have child divs that react to ng-click as there was a problem in Firefox

--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -55,10 +55,19 @@ account-projects md-list {
   padding: 0;
 }
 
+account-projects .account,
+account-projects .project {
+  outline: none;
+}
+account-projects .account:hover,
+account-projects .project:hover {
+  cursor: pointer;
+  background: #EEE;
+}
+
 account-projects .projects {
   margin-left: 40px;
 }
-
 account-projects .projects .projectName {
   margin-left: 10px;
 }
