--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -19,7 +19,8 @@ div(ng-switch="vm.toShow")
 					on-click="vm.showSelectedIssue(index, pinSelect)"
 					show-info="issue.showInfo"
 					info-text="vm.infoText"
-					on-hide-info="vm.hideInfo()")
+					on-hide-info="vm.hideInfo()"
+					md-ink-ripple)
 			md-divider
 
 	// Issue
