--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -1,4 +1,4 @@
-logout
+account-menu(account="vm.account")
 div(ng-if="!vm.state.project")
 	#account(layout="row")
 		account-profile(username="vm.username" first-name="vm.firstName" last-name="vm.lastName" email="vm.email", flex="20")
