ISSUE #210 - Fixed first project problem

--- a/public/css/external/three-d-repo.css
+++ b/public/css/external/three-d-repo.css
@@ -5,8 +5,8 @@
 	font-family:"three-d-repo";
 	src:url("../fonts/three-d-repo.eot?0af2b5f10846b192b7144d1ed47ff2cc");
 	src:url("../fonts/three-d-repo.eot?#iefix") format("embedded-opentype"),
-		url("../fonts/three-d-repo.woff") format("woff"),
-		url("../fonts/three-d-repo.ttf") format("truetype");
+		url("../fonts/three-d-repo.woff?0af2b5f10846b192b7144d1ed47ff2cc") format("woff"),
+		url("../fonts/three-d-repo.ttf?0af2b5f10846b192b7144d1ed47ff2cc") format("truetype");
 	font-weight:normal;
 	font-style:normal;
 }
