ISSUE #210 - Added user page plugins to fronted.js

--- a/frontend/registerRequest/jade/registerRequest.jade
+++ b/frontend/registerRequest/jade/registerRequest.jade
@@ -2,7 +2,7 @@
 	md-content.md-whiteframe-1dp(aria-label="Registered", flex="30")
 		md-toolbar
 			.md-toolbar-tools
-				h2 Registration request for 3D Repo
+				h2 Registration request
 		.userContent(layout="column")
 			h3 Thank you for registering with 3D Repo.
 			h3 Check your inbox for an email confirming your account. You must click the link in the email to complete the registration process.
