ISSUE #210 - Improved register verify messages

--- a/frontend/registerVerify/jade/registerVerify.jade
+++ b/frontend/registerVerify/jade/registerVerify.jade
@@ -4,9 +4,8 @@
 			.md-toolbar-tools
 				h2 Registered for 3D Repo
 		.userContent(layout="column")
-			h3(ng-if="!vm.verified") Please wait...
+			h3(ng-if="!vm.verified") {{vm.verifyErrorMessage}}
 			div(ng-if="vm.verified", layout="column", layout-align="start")
-				h3 Congratulations.
-				h3 You have successfully registered for 3D Repo. You may now login to you account.
+				h3 {{vm.verifySuccessMessage}}
 				div(layout="row")
 					md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
