ISSUE #217 - Added pricing page and introduced pricing tables

--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -31,7 +31,8 @@ home .homeUserContent {
     padding-top: 120px;
 }
 
-home .homeUserContent .md-whiteframe-1dp {
+home .homeUserContent .md-whiteframe-1dp,
+home .homeUserContent .md-whiteframe-8dp {
     border-radius: 4px;
     background: #FFF;
 }
