--- a/frontend/passwordChange/jade/passwordChange.jade
+++ b/frontend/passwordChange/jade/passwordChange.jade
@@ -3,7 +3,7 @@
 		md-toolbar
 			.md-toolbar-tools
 				h2 Change Password
-		.userContent(layout="column")
+		.userContent(layout="column", layout-align="start center")
 			div(layout="column", ng-if="!vm.passwordChanged", flex)
 				md-input-container.md-block(md-no-float)
 					input(type='password', ng-model='vm.newPassword', placeholder='New Password', ng-required, ng-keypress="vm.passwordChange($event)")
