--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -174,6 +174,9 @@ account-menu md-icon {
 #accountMenuContent {
   border-radius: 4px;
 }
+#accountMenuContent md-menu-item > .md-button {
+  display: block;
+}
 
 /** New Project Dialog ************************************************************************************************/
 .newProjectDialog {
