--- a/frontend/passwordForgot/jade/passwordForgot.jade
+++ b/frontend/passwordForgot/jade/passwordForgot.jade
@@ -11,4 +11,6 @@
 				input(type='email', ng-model='vm.email', placeholder='Email', ng-required)
 			div(layout="column", layout-align="center center")
 				md-button.md-raised.md-accent(ng-click="vm.requestPasswordChange()") Request Password Change
-				h4(style="color:{{vm.messageColor}}") {{vm.message}}
+				div(layout="row", layout-align="start center")
+					h3(style="color:{{vm.messageColor}}") {{vm.message}}
+					md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
