--- a/frontend/passwordChange/jade/passwordChange.jade
+++ b/frontend/passwordChange/jade/passwordChange.jade
@@ -9,7 +9,11 @@
 					input(type='password', ng-model='vm.newPassword', placeholder='New Password', ng-required, ng-keypress="vm.passwordChange($event)")
 				div(layout="column", layout-align="start center")
 					md-button.md-raised.md-accent(ng-click="vm.passwordChange()") Set Password
-					h4(style="color:{{vm.messageColor}}") {{vm.message}}
+					div(layout="row", layout-align="start center")
+						h3(style="color:{{vm.messageColor}}") {{vm.message}}
+						md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
+
 			div(layout="column", layout-align="center center", ng-if="vm.passwordChanged")
 				h4(style="color:{{vm.messageColor}}") {{vm.message}}
 				md-button.md-raised.md-accent(ng-click="vm.goToLoginPage()") Go To Login Page
+
