--- a/frontend/account/jade/accountProfile.jade
+++ b/frontend/account/jade/accountProfile.jade
@@ -3,49 +3,37 @@
 		md-toolbar
 			.md-toolbar-tools
 				h2 Profile
+				span(flex)
+		.profile(flex, layout="row", layout-align="center start")
+			div(flex="40")
+				md-input-container.md-block
+					label Username
+					input(ng-model="vm.username" ng-disabled="true")
+				md-input-container.md-block(flex="45")
+					label First name
+					input(ng-model="vm.firstName")
+				md-input-container.md-block(flex="45")
+					label Last name
+					input(ng-model="vm.lastName")
+				md-input-container.md-block
+					label Email
+					input(ng-model="vm.email", type="email")
+				div(layout="row", layout-align="start center")
+					md-button.md-accent(ng-click="vm.updateInfo()") Update
+					p {{vm.infoSaveInfo}}
 
-		div(layout="column")
-			div(layout="row", flex=)
-				img.account-avatar-image(ng-if="vm.hasAvatar", ng-src='{{vm.avatarURL}}')
-				#noAvatarIcon(flex, layout="row")
-					md-icon(ng-if="!vm.hasAvatar", class="fa fa-user")
-			div
-				md-list
-					md-list-item.md-2-line
-						div.md-list-item-text
-							h3 {{vm.firstName}} {{vm.lastName}}
-							p {{vm.email}}
+			span(flex="10", layout="row", layout-align="center center")
+				#profileDivider
 
-//md-content(flex layout="row" layout-align="space-between")
-	.dataContainer(flex="45")
-		div
-			md-input-container.md-block
-				label Username
-				input(ng-model="vm.username" ng-disabled="true")
-		div(layout="row" layout-align="space-between")
-			md-input-container.md-block(flex="45")
-				label First name
-				input(ng-model="vm.firstName")
-			md-input-container.md-block(flex="45")
-				label Last name
-				input(ng-model="vm.lastName")
-		div
-			md-input-container.md-block
-				label Email
-				input(ng-model="vm.email", type="email")
-		div(layout="row", layout-align="start center")
-			md-button.md-accent(ng-click="vm.updateInfo()") Update
-			p {{vm.infoSaveInfo}}
-
-	.dataContainer(flex="45")
-		div
-			md-input-container.md-block
-				label Old password
-				input(ng-model="vm.oldPassword", type="password")
-		div
-			md-input-container.md-block
-				label New password
-				input(ng-model="vm.newPassword", type="password")
-		div(layout="row", layout-align="start center")
-			md-button.md-accent(ng-click="vm.updatePassword()") Update
-			p {{vm.passwordSaveInfo}}
+			div(flex="40")
+				div
+					md-input-container.md-block
+						label Old password
+						input(ng-model="vm.oldPassword", type="password")
+				div
+					md-input-container.md-block
+						label New password
+						input(ng-model="vm.newPassword", type="password")
+				div(layout="row", layout-align="start center")
+					md-button.md-accent(ng-click="vm.updatePassword()") Update
+					p {{vm.passwordSaveInfo}}
