ISSUE #210 - Scribble pen goes over logo

--- a/frontend/home/css/home.css
+++ b/frontend/home/css/home.css
@@ -22,9 +22,11 @@ home #homeLogo {
     left: 0;
     right: 0;
     margin: auto;
+    pointer-events: none;
 }
 home #homeLogo img {
     width: inherit;
+    pointer-events: inherit;
 }
 
 home .homeUserContent {
