--- a/frontend/project/jade/viewermanager.jade
+++ b/frontend/project/jade/viewermanager.jade
@@ -8,5 +8,5 @@ div(ng-repeat="(name, viewer) in vm.viewers")
 		revision = "{{viewer.revision}}"
 		manager = "vm.manager"
 		event-service = "vm.vmservice"
-		style="pointer-events:{{vm.pointerEvents}}"
+		style="pointer-events:none"
 	)
