--- a/frontend/pricing/jade/pricing.jade
+++ b/frontend/pricing/jade/pricing.jade
@@ -2,7 +2,7 @@
 	// Basic
 	md-content.md-whiteframe-1dp(aria-label="Basic", flex="15")
 		md-toolbar
-			.md-toolbar-tools(layout-align="center center")
+			.md-toolbar-tools
 				h2 Basic
 		.userContent(layout="column", layout-align="start center", layout-fill)
 			md-icon.angular-material-icons.pricingIcon account_circle
@@ -23,7 +23,7 @@
 	// Advanced
 	md-content.md-whiteframe-8dp(aria-label="Advanced", flex="15")
 		md-toolbar
-			.md-toolbar-tools(layout-align="center center")
+			.md-toolbar-tools
 				h2#pricingMiddlePanelTitle Advanced
 		.userContent(layout="column", layout-align="start center")
 			md-icon.angular-material-icons.pricingIcon#pricingAdvancedIcon grade
@@ -52,7 +52,7 @@
 	// Enterprise
 	md-content.md-whiteframe-1dp(aria-label="Enterprise", flex="15")
 		md-toolbar
-			.md-toolbar-tools(layout-align="center center")
+			.md-toolbar-tools
 				h2 Enterprise
 		.userContent(layout="column", layout-align="start center")
 			md-icon.angular-material-icons.pricingIcon language
