--- a/frontend/register/jade/register.jade
+++ b/frontend/register/jade/register.jade
@@ -1,7 +1,7 @@
 .homeUserContent(layout="row", layout-align="center")
-	md-content.md-whiteframe-1dp(aria-label="Register", flex="20")
+	md-content.md-whiteframe-1dp(aria-label="Register")
 		md-toolbar
-			.md-toolbar-tools(layout-align="center center")
-				h2 Register
+			.md-toolbar-tools
+				h2 Sign Up
 		.userContent(layout="column", layout-align="start center", layout-fill)
-			register-form(button-label="Register")
+			register-form(button-label="Sign Up")
