--- a/frontend/login/css/login.css
+++ b/frontend/login/css/login.css
@@ -20,9 +20,7 @@ login h3 {
 login #loginVersion{
   color: rgba(0, 0, 0 , 0.3);
   font-size: 14px;
-  position: absolute;
-  bottom: 10px;
-  left: 25px;
+  margin: 10px 0 0;
 }
 
 login md-input-container {
@@ -38,7 +36,8 @@ login md-input-container input {
 
 login .loginError {
   color: #F44336;
-  margin: 5px 0 0 8px;
+  margin: 5px 0 5px;
+  font-weight: normal;
 }
 
 login .loginTitle {
@@ -46,9 +45,9 @@ login .loginTitle {
   color: rgba(0, 0, 0, 0.5) !important;
 }
 
-login #forgotPassword {
+login .loginLinks {
   font-size: 14px;
-  margin: 5px 8px;
+  margin: 5px 0;
 }
 
 login #loginDivider {
