--- a/frontend/login/css/registerForm.css
+++ b/frontend/login/css/registerForm.css
@@ -1,10 +1,8 @@
 register-form #tc {
-    margin-bottom: 10px;
-    margin-left: 5px;
     width: 300px;
 }
 register-form #tc md-checkbox {
-    margin : 0 0 0 2px;
+    margin : 0;
 }
 register-form #tc md-checkbox ._md-icon {
     border-color: rgba(0, 0, 0, 0.4);
@@ -41,4 +39,10 @@ register-form #loginPricing {
     font-size: 14px;
     margin-left: 30px;
     outline: none;
+}
+
+register-form .registerError {
+    color: #F44336;
+    margin: 5px 0 5px;
+    font-weight: normal;
 }
