--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -1,24 +1,26 @@
 .homeUserContent(layout="row", layout-align="center", flex)
 	md-content.md-whiteframe-1dp(aria-label="Registered")
 		md-toolbar
+			.md-toolbar-tools
+				h2 Log in
 		.userContent(layout="column")
 
 			// Register or login
 			div(layout="row")
 				// Login
 				div(layout="column", flex)
-					h3.loginTitle Log in
 					md-input-container.md-block(md-no-float)
 						input(type='text', ng-model='vm.user.username', placeholder='Username', ng-required, autofocus, ng-keypress="vm.login($event)")
 					md-input-container(md-no-float)
 						input(type='password', ng-model='vm.user.password', placeholder='Password', ng-required, ng-keypress="vm.login($event)")
 					div(layout="row", layout-align="start" flex="none")
 						md-button.md-accent.md-raised(ng-click="vm.login()") Log In
-					a#forgotPassword(href="", ng-click="vm.showPage('passwordForgot')") Forgot password?
 					h4.loginError {{vm.errorMessage}}
+					a.loginLinks(href="", ng-click="vm.showPage('passwordForgot')") Forgot password?
+					a.loginLinks(href="", ng-click="vm.showPage('pricing')") Sign up
 					h2.md-subhead#loginVersion Version: {{vm.version}}
 
-				div(ng-if="vm.useRegister", layout="row")
+				//div(ng-if="vm.useRegister", layout="row")
 					div(flex="10", layout="column", layout-align="center center")
 						#loginDivider(flex)
 
